--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -50,3 +50,15 @@ points[0].y = &parameters[1]; //Pointer to the Y coordinate;
 //Define the second point
 points[1].x = &parameters[2]; //Pointer to the X coordinate;
 points[1].y = &parameters[3]; //Pointer to the Y coordinate;
+
+//Define the line
+lines[0].point1 = points[0];
+lines[0].point2 = points[1];
+
+//Define the constraint
+cons[0].type = horizontal; //Make it a horizontal constraint
+cons[0].line1 = lines[0]; 
+
+}}}
+
+For any constraint we simply define the appropriate parameters for that constraint. Note that only pointers to parameters are used. Time to go to sleep, more later... 
