Edited wiki page through web user interface.

--- a/wiki/HowToUseSketchSolve.wiki
+++ b/wiki/HowToUseSketchSolve.wiki
@@ -61,4 +61,11 @@ cons[0].line1 = lines[0];
 
 }}}
 
-For any constraint we simply define the appropriate parameters for that constraint. Note that only pointers to parameters are used. Time to go to sleep, more later... 
+For any constraint we simply define the appropriate parameters for that constraint. Note that only pointers to parameters are used.
+
+== Solve the constraints ==
+
+To solve the sketch simply call the solve function with the appropriate parameters. The solve function takes five parameters as shown below:
+{{{
+results = solve(parameters, numberOfParameters , constraints , numberOfConstraints)  
+}}}
